--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "start.js",
   "dependencies": {
+    "@aragon/ui": "^0.35.1",
     "bn.js": "^4.11.8",
     "leap-core": "0.28.3",
     "lodash": "^4.17.11",
@@ -11,6 +12,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
     "twilio": "^3.30.1",
     "web3": "1.0.0-beta.33",
     "web3-core-promievent": "1.0.0-beta.33"
